# legged-robot-sim2real

./: .gitignore  Dockerfile  LICENSE  README.md  conda_env.yml
deploy/ros2_RL_controller/src/RL_controller/: package.xml  setup.cfg  setup.py
deploy/ros2_RL_controller/src/RL_controller/RL_controller/: joystick.py
deploy/ros2_RL_controller/src/RL_controller/resource/: policy.jit
deploy/ros2_RL_controller/src/robot_interface/msg/: RobotCMD.msg
deploy/sim2sim/scripts/: launch_ros2topic.sh  launch_simulator.sh
deploy/sim2sim/simulator/config/: Control_Parameters.info  Estimators.info  RL_Parameters.info  Sim_Motor.info
deploy/sim2sim/simulator/models/: policy_1.onnx  policy_2.onnx  policy_3.onnx
deploy/sim2sim/src/launch/: launch_all.py
deploy/sim2sim/src/robot_cmd_subscriber/: CMakeLists.txt  package.xml
deploy/sim2sim/src/robot_cmd_subscriber/include/: robot_cmd_subscriber.hpp
deploy/sim2sim/src/robot_cmd_subscriber/src/: robot_cmd_subscriber.cpp
deploy/sim2sim/src/robot_interface/: CMakeLists.txt  package.xml
deploy/sim2sim/src/robot_interface/include/: robot_state_protocols.h
deploy/sim2sim/src/robot_interface/msg/: RobotState.msg
deploy/sim2sim/src/robot_state_publisher/: CMakeLists.txt  package.xml
deploy/sim2sim/src/robot_state_publisher/include/: robot_state_publisher.hpp
deploy/sim2sim/src/robot_state_publisher/src/: robot_state_publisher.cpp
doc/: docker.md  install.md
legged_gym/legged_gym/envs/: __init__.py
legged_gym/legged_gym/envs/sirius_diff_release/: sirius_flat_config.py  sirius_joystick.py
legged_gym/legged_gym/scripts/: export_JIT_model.py
legged_gym/legged_gym/utils/: helpers.py
legged_gym/resources/robots/sirius_diff_release/meshes/: base_link.dae  fl_abad_link.dae  fl_foot_link.STL  fl_hip_link.dae  fl_knee_link.STL  fl_knee_link.dae  fr_abad_link.dae  fr_foot_link.STL  fr_hip_link.dae  fr_knee_link.STL  fr_knee_link.dae  rl_abad_link.dae  rl_foot_link.STL  rl_hip_link.dae  rl_knee_link.STL  rl_knee_link.dae  rr_abad_link.dae  rr_foot_link.STL  rr_hip_link.dae  rr_knee_link.STL  rr_knee_link.dae
legged_gym/resources/robots/sirius_diff_release/urdf/: sirius_diff_new.urdf
(+15 files in other folders)
